# UC

./: .gitignore  .mailmap  20110722.configure.ac  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h  config.h.in  configure  configure.ac  libtool  uc-config.in  uc.m4  uc.pc.in  uc.spec  uc.spec.in
conf/: Makefile.am  Makefile.in  config.cfg.tpl  example.conf.tpl  log4cpp.conf.tpl
data/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in
include/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  libexample.la
lib64/: Makefile.am  libexample.la
m4/: acinclude.m4
pkgconfig/: gtest.pc  uc.pc.in
scripts/: Makefile.am  example.sh  uc-config.in
src/: Makefile.am  Makefile.in  common.h  uc.c  uc.h  uccexam.c  uccexam.h  uccmain.c  uccppexam.cpp  uccppexam.h  uccppmain.cpp  ucmain.c  ucmain.h  ucrun.c
src/common/: Makefile.am  stringutility.cpp  stringutility.h
src/interface/: Makefile.am  if.cpp  if.h  ucif.cpp
src/protobuf/: Makefile.am  uc.proto
src/util/: Makefile.am  Makefile.in  nomalize.c  nomalize.h  testso.cpp  testso.h
test/: Makefile.am  Makefile.in  dotest.c  dotest.cpp  template.cpp  template.h  uctf.cpp  uctf.h
test.20090819/: Makefile.am  t1.c
test/template/: Makefile.am  prime_tables.h  sample1.cc  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
tests/: Makefile.am  Makefile.in  t1.c
tools/: Makefile.am  changelog.pl  example.pl
